2006-11-07  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/browse_story_test.rb (BrowseStoryTest): Move some test to login_story_test.rb

	* donrails/test/integration/login_story_test.rb (LoginStoryTest): New test file.
	
	* donrails/app/controllers/login_controller.rb
	(LoginController::login_index): Cleanup. (Close issue #31)
	
	* r130
	* donrails/app/controllers/login_controller.rb (LoginController::authorize): Change to apply for no PATH_INFO support httpd. Change to use @request.env['PATH_INFO'] or @request.env['REQUEST_URI'].

	* r129
	* donrails/app/controllers/login_controller.rb (LoginController::fix_article): Fix to add new category. (issue #30)
	(LoginController::authenticate): Change to redirect_to flash[:op]. (issue #31? TODO: check)

	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_add_banlist_ipaddr): Add test for private method (banlist_test_by_ar_ipaddr).

	* donrails/app/controllers/login_controller.rb (LoginController::banlist_test_by_ar_ipaddr): Small Change for stability. 

2006-11-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController::new_article): Change to use loing username as default article author.
	* donrails/app/views/login/new_article.rhtml: likewise.

2006-11-04  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/application.rb (ApplicationController::don_delete_all): New method. It deletes all files and sub-directories. 
	(ApplicationController::don_delete_cache_all): New method. It called by login/delete_cache.
	* donrails/app/controllers/login_controller.rb (LoginController::delete_don_env): Change to clear all cached pages.
	(LoginController::add_don_env): likewise.
	* donrails/app/controllers/login_controller.rb (LoginController::delete_cache): New method: It deletes all files and directories for cache pages.
	
	* INSTALL.ja: Change to use /login/manage_don_env
	* donrails/tool/donrails-setup.rb: Cleanup.
